--- a/index.html
+++ b/index.html
@@ -1,95 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <style>
+      body {
+        background-color: #0a1931;
+      }
+      .container {
+        display: grid;
+        grid-gap: 0.1rem;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 24rem;
+        margin: auto;
+      }
+      .box {
+        height: 7rem;
+        background-color: #185adb;
+        color: #ffc947;
+        font-size: 6rem;
+        text-align: center;
+        cursor: pointer;
+      }
+      .heading {
+        color: #feddbe;
+        text-align: center;
+      }
+      .btn {
+        background-color: #ffc947;
+        color: #185adb;
+        border: 0px;
+        padding: 1rem;
+        margin: auto;
+        font-weight: bold;
+        cursor: pointer;
+      }
+      .btn:hover {
+        background-color: #aac947;
+      }
+      .reset-container {
+        text-align: center;
+      }
+      #credits {
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
-    hello r helllo epidu iirla naan nalla iruken nee epdi irld
-    <!-- console -> object .., log-> function fro that object  -->
-    <script src="scripts.js"></script>
-    <script type="module">
-      import { Gender } from "./js/gender.js";
-      import { Details } from "./js/passenger.js";
-      console.log("heelloo");
-      console.log("World");
-      console.log("Fahrenheit: " + (5 * (9 / 5) + 32));
-      let a = 5,
-        b = 5;
-      console.log("Area of " + a + " x " + b + " Rectangle is: " + a * b);
-      console.log("Percentage of boys is: " + (10 / (10 + 15)) * 100);
-      console.log("Left over apples: " + (19 % 4));
-      console.log(printHello("jeevan"));
+    <h1 class="heading">Tic Tac Toe</h1>
+    <h2 class="heading" id="player">Current Player: X</h2>
+    <div class="container" id="container">
+      <div class="box" id="0"></div>
+      <div class="box" id="1"></div>
+      <div class="box" id="2"></div>
+      <div class="box" id="3"></div>
+      <div class="box" id="4"></div>
+      <div class="box" id="5"></div>
+      <div class="box" id="6"></div>
+      <div class="box" id="7"></div>
+      <div class="box" id="8"></div>
+    </div>
+    <h2 class="heading" id="winner"></h2>
+    <div class="reset-container">
+      <button class="btn" id="reset">RESET</button>
+    </div>
+    <script>
+      let flag = 0;
+      if (flag == 1) reset();
+      let count = 0;
+      let box = document.getElementsByClassName("box");
+      let current = 0;
+      let num = [];
+      let res = document.getElementById("reset");
+      res.addEventListener("click", reset);
+      for (let i = 0; i <= 8; i++) {
+        num[i] = -1;
+      }
+      let arr = ["X", "Y"];
+      for (let k of box) {
+        k.addEventListener("click", function () {
+          if (flag == 1 || count == 9) reset();
+          let z = k.innerText;
+          if (z.length > 0) return;
+          k.innerHTML = arr[current];
+          let sid = k.getAttribute("id");
+          console.log(sid);
+          count++;
 
-      var details = {
-        driver: false,
-        conductor: true,
-      };
-      var passengers = [
-        {
-          fname: "Jeevan",
-          age: 20,
-          alive: true,
-          gender: {
-            code: "M",
-            name: "Male",
-          },
-          content: details,
-          getfullname: function () {
-            var title = this.gender.code == "M" ? "MR." : "Mrs";
-            return title + " " + this.fname;
-          },
-        },
-      ];
-      print(passengers);
-      var category = [
-        {
-          id: 1,
-          code: "BO",
-          Name: "Books",
-        },
-        {
-          id: 2,
-          code: "EL",
-          Name: "Electronics",
-        },
-        {
-          id: 3,
-          code: "AP",
-          Name: "Apparels",
-        },
-        {
-          id: 4,
-          code: "HI",
-          Name: "Household Items",
-        },
-      ];
-
-      var vendors = [
-        {
-          id: 1,
-          name: "Star Enterprise",
-          contact: "7777777777",
-        },
-        {
-          id: 2,
-          name: "Cloudtail Retail Ltd",
-          contact: "8888888888",
-        },
-      ];
-      printcategory(category);
-      console.log(passengers[0].getfullname());
-
-      var male = new Gender("M", "Male");
-      var female = new Gender("F", "Female");
-
-      var passenger = new Details("jeevan", 20, male, 7338773925);
-      console.log(passenger.getfullname());
-      console.log(0b111111); //ob for binary
-      console.log(0xff); // 0x for hexadecimal
-      console.log(0o177); // 0o for octal
-      console.log(isNaN("3a")); // returns true as NaN is not a number
+          num[parseInt(sid)] = current;
+          if (
+            (num[0] == num[3] && num[0] == num[6] && num[0] != -1) ||
+            (num[0] == num[4] && num[0] == num[8] && num[0] != -1) ||
+            (num[2] == num[4] && num[4] == num[6] && num[2] != -1) ||
+            (num[0] == num[1] && num[1] == num[2] && num[0] != -1) ||
+            (num[3] == num[4] && num[4] == num[5] && num[3] != -1) ||
+            (num[6] == num[7] && num[7] == num[8] && num[7] != -1) ||
+            (num[1] == num[4] && num[1] == num[7] && num[1] != -1) ||
+            (num[2] == num[5] && num[2] == num[8] && num[2] != -1)
+          ) {
+            winnerchoosen();
+          }
+          current = current == 0 ? 1 : 0;
+          let heading = document.getElementById("player");
+          heading.innerHTML = `Current Player: ${arr[current]}`;
+          if (count == 9) {
+            let winner = document.getElementById("winner");
+            winner.innerHTML = "Game is Drawn";
+          }
+        });
+      }
+      function winnerchoosen() {
+        let winner = document.getElementById("winner");
+        winner.innerHTML = `Winner is ${arr[current]}`;
+        flag = 1;
+        // reset();
+        // console.log(arr[current]);
+      }
+      function reset() {
+        current = 0;
+        for (let i = 0; i <= 8; i++) {
+          num[i] = -1;
+        }
+        count = 0;
+        flag = 0;
+        let winner = document.getElementById("winner");
+        winner.innerHTML = "";
+        let heading = document.getElementById("player");
+        heading.innerHTML = `Current Player: ${arr[current]}`;
+        for (k of box) {
+          k.innerText = "";
+        }
+      }
     </script>
   </body>
 </html>
